<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.davidwolfs.projet_annonce.RechercheArticlePrixActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:text="@string/btnRechercherArticlePrix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRetour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/btnRetour" />

    <TextView
        android:id="@+id/prixMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRetour"
        android:layout_marginTop="47dp"
        android:layout_toEndOf="@+id/btnRetour"
        android:layout_toRightOf="@+id/btnRetour"
        android:text="@string/prixMin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prixMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eTxtPrixMin"
        android:layout_alignStart="@+id/eTxtPrixMin"
        android:layout_below="@+id/eTxtPrixMin"
        android:layout_marginTop="41dp"
        android:text="@string/prixMax"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eTxtPrixMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/prixMin"
        android:layout_alignStart="@+id/prixMin"
        android:layout_below="@+id/prixMin"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnRechercherParPrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtVMsgError"
        android:layout_alignEnd="@+id/prixMin"
        android:layout_alignRight="@+id/prixMin"
        android:layout_marginBottom="38dp"
        android:text="@string/btnRechercherParPrix" />

    <TextView
        android:id="@+id/txtVMsgError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/prixMin"
        android:layout_alignLeft="@+id/btnRechercherParPrix"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/prixMin"
        android:layout_alignStart="@+id/btnRechercherParPrix"
        android:layout_marginBottom="33dp" />

    <EditText
        android:id="@+id/eTxtPrixMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/eTxtPrixMin"
        android:layout_alignRight="@+id/eTxtPrixMin"
        android:layout_below="@+id/prixMax"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:inputType="textPersonName" />

</RelativeLayout>